# kubectl-config-doctor

./: .krew.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: doctor.rs  main.rs  style.rs
